--- a/Products/product.html
+++ b/Products/product.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Heritage Threads</title>
+    <link rel="icon" href="./images/webLogo.jpg" type="image/x-icon">
 
   <link rel="stylesheet" href="Product.css" />
   <link rel="stylesheet" href="card.css" />
