--- a/Search/search.html
+++ b/Search/search.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Heritage Threads</title>
+    <link rel="icon" href="../Products/images/webLogo.jpg" type="image/x-icon">
   <link rel="stylesheet" href="search.css" />
   <link rel="stylesheet" href="searchCard.css" />
   <script src="https://kit.fontawesome.com/1b2855684f.js" crossorigin="anonymous"></script>
