Add Web  PreLoader

--- a/Custom/Custom.html
+++ b/Custom/Custom.html
@@ -54,7 +54,9 @@
 
 <body class="font-Google">
 
-
+    <div id="loader" style="height: 100svh; width: 100%; background-color: black; position: fixed; top: 0; left: 0; z-index:100;">
+        <div class="loader"></div> 
+    </div>
     <!-- BODY -->
     <button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar"
         type="button"
