--- a/Home/index.html
+++ b/Home/index.html
@@ -229,6 +229,9 @@
 </head>
 
 <body>
+    <div id="loader" style="height: 100svh; width: 100%; background-color: black; position: fixed; top: 0; left: 0; z-index:100;">
+        <div class="loader"></div>
+    </div> 
     <div>
         <nav>
             <div class="headerContainer">
