--- a/Login/login.html
+++ b/Login/login.html
@@ -52,6 +52,9 @@
 </head>
 
 <body class="font-tenor">
+    <div id="loader" style="height: 100svh; width: 100%; background-color: black; position: fixed; top: 0; left: 0; z-index:100;">
+        <div class="loader"></div> 
+    </div>
     <!-- NAVBAR -->
     <nav class="font-tenor">
         <!-- navbar advertisement -->
