Link to the Form added on the main page

--- a/Home/index.html
+++ b/Home/index.html
@@ -1070,7 +1070,7 @@
                         <li>Payment Policy</li>
                         <li>Shipping &amp; Policy</li>
                         <li>Track your order / Return</li>
-                        <li>FAQs</li>
+                        <li><a href="../FAQ's/index.html" style="text-decoration: none; font-weight: normal;">FAQs</a></li>
                     </ul>
                 </div>
                 <div class="max-[700px]:hidden text-left text-xs sm:text-sm md:text-base">
