Terms And Conditions page added

--- a/Home/index.html
+++ b/Home/index.html
@@ -1054,7 +1054,7 @@
                     <ul class="footerList font-tenor">
                         <li>Our Tale</li>
                         <li>Our Stories</li>
-                        <li>Terms and Conditions</li>
+                        <li><a href="../t&C/t&C.html" style="text-decoration: none; font-weight: normal;">Terms and Conditions</a></li>
                         <li>We Care</li>
                     </ul>
                 </div>
