--- a/Home/index.html
+++ b/Home/index.html
@@ -690,9 +690,9 @@
                 Sign up to our newsletter to receive exclusive offers.
             </p>
             <div class="newsletterFormContainer">
-                <div class="newsletterFormInputContainer"><input type="text" placeholder="E-mail"></div>
+                <div class="newsletterFormInputContainer"><input id="email-box" type="email" type="text" placeholder="E-mail"></div>
                 <div>
-                    <button class="btn btn-2 hover-slide-right" style="width: 300px;">
+                    <button type="button" onclick="showMessage()" class="btn btn-2 hover-slide-right" style="width: 300px;">
                         <span>SUBSCRIBE</span>
                     </button>
                 </div>
@@ -1168,5 +1168,7 @@
         }
     });
 </script>
+<!-- JS for Newsletter -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 </html>
