--- a/FAQ's/index.html
+++ b/FAQ's/index.html
@@ -6,14 +6,16 @@
     <title>Heritage Threads</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="../Products/images/webLogo.jpg" type="image/x-icon">
+    <link href="https://cdn.prod.website-files.com/60f685550f9f4d3b537d1987/61141acd7ab2665bf26a75bd_Favicon.png"
+        rel="shortcut icon" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/883d459486.js" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
-
-        <nav id="navbar" class="navbar">
-            <img src="./images/logo.png" class="logo">
-        </nav>
-
-
     <main>        
         <section class="team-section">
             <h2 class="team-title">The Faces Behind the Fashion.<br>Our Creative Collective</h2>
