--- a/FAQ's/index.html
+++ b/FAQ's/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heritage Threads</title>
-    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="../Products/images/webLogo.jpg" type="image/x-icon">
-    <link href="https://cdn.prod.website-files.com/60f685550f9f4d3b537d1987/61141acd7ab2665bf26a75bd_Favicon.png"
-        rel="shortcut icon" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/883d459486.js" crossorigin="anonymous"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
     <main>        
+        
         <section class="team-section">
             <h2 class="team-title">The Faces Behind the Fashion.<br>Our Creative Collective</h2>
             <div class="team-grid">
@@ -106,7 +100,35 @@
             </div>
         </section>
 
-        
+        <div class="section footer">
+            <div class="grid-quarters footer-photos">
+                <img src="../Home/images/22.webp"
+                    alt="">
+                <img src="../Home/images/23.webp"
+                    alt="">
+                <img src="../Home/images/24.webp"
+                    alt="">
+                <img src="../Home/images/19.webp"
+                    alt="">
+            </div>
+            <div class="footer">
+                <div class="footer-top">
+                    <a href="#" class="footer-logo">
+                        <img src="./images/logo.png"
+                            loading="lazy" alt="" class="brand-image">
+                    </a>
+                    <br>
+                    <h1 class="margin-bottom-0">We have the perfect<br> threads for you</h1>
+                </div>
+                <div class="footer-bottom">
+                    <ul class="footer-social">
+                        <li><a href="#"><i class="scroll2 fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="scroll2 fa-brands fa-square-facebook"></i></a></li>
+                        <li><a href="#"><i class="scroll2 fa-brands fa-x-twitter"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="script.js"></script>
