improvements in heritage collection section

--- a/Home/index.html
+++ b/Home/index.html
@@ -763,7 +763,7 @@
                 Embrace Timeless Elegance and Global Tradition
             </h1>
         </div>
-        <div class="collectionContainer" style="margin : 50px 50px;">
+        <div class="collectionContainer halfView" style="margin : 50px 50px -2px 50px;">
             <div class="grid-item">
                 <img src="../Home/images/13.webp" class="gridImage" alt="">
                 <div class="btnContainer">
@@ -830,18 +830,18 @@
                     </button>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item addBlur">
                 <img src="../Home/images/19.webp" class="gridImage" alt="">
                 <div class="btnContainer">
                     <h1 class="gridImageHeading">
-                        JEANS
+                        Casual Loungewear
                     </h1>
                     <button class="btn btn-3 hover-slide-right">
                         <span>VIEW MORE</span>
                     </button>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item addBlur">
                 <img src="../Home/images/20.webp" class="gridImage" alt="">
                 <div class="btnContainer">
                     <h1 class="gridImageHeading">
@@ -856,7 +856,7 @@
                 <img src="../Home/images/21.webp" class="gridImage" alt="">
                 <div class="btnContainer">
                     <h1 class="gridImageHeading">
-                        JEANS
+                        Power Suits
                     </h1>
                     <button class="btn btn-3 hover-slide-right">
                         <span>VIEW MORE</span>
@@ -867,7 +867,7 @@
                 <img src="../Home/images/22.webp" class="gridImage" alt="">
                 <div class="btnContainer">
                     <h1 class="gridImageHeading">
-                        JEANS
+                        Modern Tailored
                     </h1>
                     <button class="btn btn-3 hover-slide-right">
                         <span>VIEW MORE</span>
@@ -878,7 +878,7 @@
                 <img src="../Home/images/23.webp" class="gridImage" alt="">
                 <div class="btnContainer">
                     <h1 class="gridImageHeading">
-                        JEANS
+                        Breezy Beachwear
                     </h1>
                     <button class="btn btn-3 hover-slide-right">
                         <span>VIEW MORE</span>
@@ -889,7 +889,7 @@
                 <img src="../Home/images/24.webp" class="gridImage" alt="">
                 <div class="btnContainer">
                     <h1 class="gridImageHeading">
-                        JEANS
+                        Embroidered Kurtas
                     </h1>
                     <button class="btn btn-3 hover-slide-right">
                         <span>VIEW MORE</span>
@@ -897,7 +897,11 @@
                 </div>
             </div>
         </div>
-
+        <div class="btnArea btnHalfView">
+            <button class="btn btn-3 hover-slide-right " id="ViewAllBtn">
+                <span class="toggleSpan">View all collections</span>
+            </button>
+        </div>
     </section>
 
 
