fix: fixes Issue_#29
solved the issue and fixed bugs

--- a/Home/index.html
+++ b/Home/index.html
@@ -1098,11 +1098,11 @@
                                     <li>Early access to new editions</li>
                                     <li>Personalized style recommendations</li>
                                     <li>Special discounts on ethnic wear</li>
-                                    <li>Priority customer support</li>
+                                    <li>Priority Customer Support</li>
                                 </ul>
                             </div>
                             <button
-                                class="mt-4 px-5 py-3 text-[16px] font-bold text-whitesmoke bg-[#E0218A] rounded-lg hover:bg-[#E63C94] transition-all">
+                                class="mt-4 px-5 py-3 text-[15px] font-bold text-whitesmoke bg-[#E0218A] rounded-lg hover:bg-[#E63C94] transition-all">
                                 Subscribe Now
                             </button>
                         </div>
